<resources>
    <string name="app_name">AndroidAcademyhw</string>
    <string name="avengers_movie_name">Avengers:\nEnd Game</string>
    <string name="avengers_movie_name_list">Avengers: End Game</string>
    <string name="genre_text">Action, Adventure, Fantasy</string>
    <string name="movie_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movie_logo">movie logo</string>
    <string name="storyline">Storyline</string>
    <string name="_13">13+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>

    <string name="_137_min">137 MIN</string>
    <string name="movies_text_movies_label">Movies list</string>

    <string name="movie_item_text_pg">%d+</string>
    <string name="movie_item_text_reviews">%d reviews</string>
    <string name="movie_item_text_time">%d min</string>

    <string name="details_text_back">Back</string>
    <string name="details_item_text_pg">%d+</string>
    <string name="details_text_reviews">%d reviews</string>
</resources>