<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926"
    tools:context=".details.FragmentMoviesDetails">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".details.FragmentMoviesDetails">

        <ImageView
            android:id="@+id/movie_logo_image"
            android:layout_width="410dp"
            android:layout_height="302dp"
            android:contentDescription="@string/movie_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintDimensionRatio="w,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintTop_toBottomOf="@id/movie_logo_image" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_logo_image" />

        <ImageView
            android:id="@+id/button_back_image"
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:src="@drawable/path"
            app:layout_constraintBottom_toBottomOf="@id/button_back_text"
            app:layout_constraintEnd_toStartOf="@id/button_back_text"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/button_back_text" />

        <TextView
            android:id="@+id/button_back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/robotolight"
            android:text="Back"
            android:textColor="#6D6D80"
            android:textSize="@dimen/small_textsize"
            app:layout_constraintStart_toEndOf="@id/button_back_image"
            app:layout_constraintTop_toTopOf="@id/movie_logo_image" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/robotoblack"
            android:text="@string/_13"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/movie_logo_image"
            app:layout_constraintStart_toEndOf="@id/left_guideline" />

        <TextView
            android:id="@+id/movie_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoblack"
            android:text="@string/avengers_movie_name"
            android:textColor="@color/color_white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_logo_image" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/robotolight"
            android:text="@string/genre_text"
            android:textColor="#FF3466"
            android:textSize="@dimen/main_textsize"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_name_text" />

        <RatingBar
            android:id="@+id/ratingbar"
            style="@style/CustomRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/review_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/robotoblack"
            android:text="125 REVIEWS"
            android:textColor="#6D6D80"
            android:textSize="@dimen/main_textsize"
            app:layout_constraintStart_toEndOf="@+id/ratingbar"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/Storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/robotoblack"
            android:text="@string/storyline"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/main_textsize"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/review_amount" />

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/robotolight"
            android:text="@string/movie_description"
            android:textColor="@color/color_white"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/Storyline" />

        <TextView
            android:id="@+id/Cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/robotoblack"
            android:text="@string/cast"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/main_textsize"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Cast"
            tools:itemCount="5"
            tools:listitem="@layout/actor" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>