<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:srcCompat="@drawable/bg2" />

    <ImageView
        android:id="@+id/small_movie_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="@id/small_movie_picture"
        app:layout_constraintTop_toBottomOf="@+id/movies_list"
        app:srcCompat="@drawable/smaller_movie" />

    <ImageView
        android:id="@+id/small_mask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="@id/small_movie_picture"
        app:layout_constraintTop_toBottomOf="@+id/movies_list"
        app:srcCompat="@drawable/smaller_mask" />

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="@id/image_frame"
        app:layout_constraintTop_toTopOf="@id/image_frame" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/robotoblack"
        android:text="@string/_13"
        android:textColor="@color/white"
        android:textSize="@dimen/small_textsize"
        app:layout_constraintStart_toStartOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="@id/rectangle" />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:src="@drawable/like"
        app:layout_constraintEnd_toEndOf="@id/image_frame"
        app:layout_constraintTop_toTopOf="@id/image_frame" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/robotolight"
        android:text="@string/genre_text"
        android:textColor="#FF3466"
        android:textSize="@dimen/smallest_textsize"
        app:layout_constraintBottom_toBottomOf="@id/small_movie_picture"
        app:layout_constraintStart_toStartOf="@id/small_movie_picture" />

    <RatingBar
        android:id="@+id/ratingbar"
        style="@style/CustomRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintStart_toStartOf="@id/small_movie_picture"/>

    <TextView
        android:id="@+id/review_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/robotoblack"
        android:text="125 REVIEWS"
        android:textColor="#6D6D80"
        android:textSize="@dimen/smallest_textsize"
        app:layout_constraintStart_toEndOf="@+id/ratingbar"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/movie_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/robotoblack"
        android:text="@string/avengers_movie_name_list"
        android:textColor="@color/color_white"
        android:textSize="@dimen/main_textsize"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/ratingbar" />

    <TextView
        android:id="@+id/movie_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:fontFamily="@font/robotoblack"
        android:text="@string/_137_min"
        android:textColor="#6D6D80"
        android:textSize="@dimen/smallest_textsize"
        app:layout_constraintTop_toBottomOf="@id/movie_name_text"
        app:layout_constraintStart_toStartOf="@id/small_movie_picture"/>

</androidx.constraintlayout.widget.ConstraintLayout>